force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/CLZV6BP__Clarizen_Milestone__c.object-meta.xml
<CustomObject>
    <label>Clarizen Milestone</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>External ID (SF)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarizen Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>