force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_ActualDuration__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_ActualDuration__c</fullName>
    <label>Actual Duration</label>
    <type>DateTime</type>
</CustomField>