force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_ActualExpenses__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_ActualExpenses__c</fullName>
    <label>Actual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>