force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_DueDate__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_DueDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>