force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_Duration__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_Duration__c</fullName>
    <label>Duration</label>
    <length>60</length>
    <type>Text</type>
</CustomField>