force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_Manager__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work Item Manager for the Milestone</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Clarizen Milestones</relationshipLabel>
    <relationshipName>Clarizen_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>