force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_RemainingEffort__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_RemainingEffort__c</fullName>
    <label>Remaining Effort</label>
    <length>60</length>
    <type>Text</type>
</CustomField>