force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_SYSID__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_SYSID__c</fullName>
    <label>ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>