force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__CLZ_TrackStatus__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_TrackStatus__c</fullName>
    <label>Track Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Off Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>