force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/CLZV6BP__Project_name__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Project_name__c</fullName>
    <formula>CLZV6BP__ParentProject__r.CLZV6BP__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent project name</label>
    <type>Text</type>
</CustomField>