force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/fields/Contract_Hours_B__c.field-meta.xml
<CustomField>
    <fullName>Contract_Hours_B__c</fullName>
    <label>Contract Hours (B)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>