force-app/main/default/objects/CLZV6BP__Clarizen_Milestone__c/listViews/CLZV6BP__All.listView-meta.xml
<ListView>
    <fullName>CLZV6BP__All</fullName>
    <columns>NAME</columns>
    <columns>CLZV6BP__Name__c</columns>
    <columns>CLZV6BP__Clarizen_ID__c</columns>
    <columns>CLZV6BP__CLZ_PercentCompleted__c</columns>
    <columns>CLZV6BP__CLZ_RemainingEffort__c</columns>
    <columns>CLZV6BP__CLZ_StartDate__c</columns>
    <columns>CLZV6BP__CLZ_DueDate__c</columns>
    <columns>CLZV6BP__CLZ_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>